2001-12-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-use-refresh): New user option.
	(w3m-refresh-timer, w3m-current-refresh): New buffer-local
	variables.
	(w3m-clear-local-variables, w3m-copy-local-variables): Handle
	`w3m-current-refresh'.
	(w3m-meta-refresh-content-regexp) 
	(w3m-meta-content-refresh-regexp): New constant.
	(w3m-decode-buffer): Call `w3m-decode-get-refresh' first.
	(w3m-decode-get-refresh): New function.
	(w3m-view-previous-page): Bind `w3m-use-refresh' to nil.
	(w3m-quit, w3m-close-window): Call `w3m-cancel-refresh-timer' at
	any buffers.
	(w3m-goto-url): Call `w3m-cancel-refresh-timer' first.
	Call `w3m-refresh-at-time' at last; start REFRESH timer.
	(w3m-goto-url-with-timer): New function.
	(w3m-refresh-at-time): New function for FSF Emacs.
	
	* w3m-xmas.el (w3m-refresh-at-time): New function for XEmacs.

	* w3m-util.el (w3m-cancel-refresh-timer): New function.
	(w3m-current-refresh, w3m-refresh-timer, w3m-use-refresh): Avoid
	byte-compiled warnings.

	* w3m-proc.el (w3m-process-stop): Call `w3m-cancel-refresh-timer'.

2001-12-24  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-dump-head-source-command-arguments) [w3mmee]: Support
	`w3m-accept-languages'.

2001-12-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-type): Changed condition to decide type.
	(w3m-decoder-alist): Call `file-name-nondirectory' before
	`w3m-command' is refered.
	(w3m-dirlist-cgi-program): Ditto.

2001-12-21  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-type): Changed condition to decide type.
	(w3m-decoder-alist): Use `w3m-command' for inflate command path.
	(w3m-dirlist-cgi-program): Use `w3m-command'.
	(w3m-dump-head-source-command-arguments) [w3mmee]: Don't
	add "-o accept_language=xxx".

2001-11-16  OKAZAKI Tetsurou <okazaki@be.to>

	* w3m.el (w3m-type): Use "w3m-m17n" if exists.

2001-12-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-mailto-url): Use the property `composefunc' to