@@ -4407,20 +4407,19 @@ field for this request."
 	    (run-hook-with-args 'w3m-display-hook url)
 	    (w3m-refresh-at-time))))))))
 
-(eval-and-compile
-  (unless (fboundp 'w3m-refresh-at-time)
-    ;; for FSF Emacsen
-    (defun w3m-refresh-at-time ()
-      (when (and w3m-use-refresh w3m-current-refresh)
-	(setq w3m-refresh-timer
-	      (run-at-time (car w3m-current-refresh)
-			   nil
-			   'w3m-goto-url-with-timer
-			   (cdr w3m-current-refresh)
-			   (current-buffer)))))))
+(defun w3m-refresh-at-time ()
+  (when (and w3m-use-refresh w3m-current-refresh)
+    (if (= (car w3m-current-refresh) 0)
+	(w3m-goto-url-with-timer (cdr w3m-current-refresh) (current-buffer))
+      (setq w3m-refresh-timer
+	    (run-at-time (car w3m-current-refresh)
+			 nil
+			 'w3m-goto-url-with-timer
+			 (cdr w3m-current-refresh)
+			 (current-buffer))))))
 
 (defun w3m-goto-url-with-timer (url buffer)
-  "Run the command `w3m-goto-url' for the refresh timer."
+  "Run the command `w3m-goto-url' from the timer of refresh."
   (when (and url buffer (get-buffer buffer))
     (if (get-buffer-window buffer)
 	(save-selected-window
